--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <input type="checkbox" class="checkbox" name="divStyle" id="divStyle">
         </div>
         <div class="box">
-            
+            <button class="button" onclick="">Ta bort</button>
+        </div>
+        <div class="box">
+            <div class="responsBox" id="responsFromJsToHTML"></div>
         </div>
     </div>
     <script src="script.js"></script>
