--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="title">Labb2-Grupp13</h1>
-    <div class="contaner">
+    <div class="container">
         <div class="box">
             <h3 class="label">Färg</h3>
             <input type="text" class="textfield" name="color" id="color">
@@ -29,6 +29,6 @@
             <div class="responsBox" id="responsFromJsToHTML"></div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
