--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1 class="title">Labb2-Grupp13</h1>
     <div class="container">
+        <div class="card-background">
         <div class="box">
             <h3 class="label">Färg</h3>
             <input type="text" class="textfield" name="color" id="color">
@@ -28,6 +29,7 @@
         <div class="box">
             <div class="responsBox" id="responsFromJsToHTML"></div>
         </div>
+    </div>
     </div>
     <script src="script2.js"></script>
 </body>
