--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="checkbox" class="checkbox" name="divStyle" id="divStyle">
         </div>
         <div class="box">
-            <button class="button" onclick="">Ta bort</button>
+            <button class="button" >Ta bort</button>
         </div>
         <div class="box">
             <div class="responsBox" id="responsFromJsToHTML"></div>
