Update js and html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Labb2-Grupp13</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
             <input type="checkbox" class="checkbox" name="divStyle" id="divStyle">
         </div>
         <div class="box">
-            <button class="button" >Ta bort</button>
+            <button onClick="buttonDivRemove()" class="button" >Ta bort</button>
         </div>
         <div class="box">
             <div class="responsBox" id="responsFromJsToHTML"></div>
